YA ENVIA CORRE CON SMTP DE GMAIL FALTA ADJUNTAR PDF Y GUARDAR DATOS DE RECIBO EN LA DB

--- a/ver.html
+++ b/ver.html
@@ -9,12 +9,18 @@
     </script>
     <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
 
+<base href="https://raw-dot-custom-elements.appspot.com/Manohar-Gunturu/calendar-lite/v1.7.5/calendar-lite/">
+<script src="webcomponentsjs/webcomponents-lite.js"></script>
+<link rel="import" href="calendar-lite.html">
+
 </head>
 
 <body>
 
 
 <div class="container text-center">
+
+<calendar-lite></calendar-lite>
 
 	<br/>
 
